# xsDesignHost

./: .gitignore  main.py  pyproject.toml
src/domainsServer/: app.py
src/publishingAPI/: app.py  validation.py  websiteCreation.py
